# VulkanApp1

./: CMakeLists.txt  cmakeNote.txt  compileshaders.sh  conanfile.txt  nsightopen.sh  renderdocopen.sh  runsetup.sh  vkvia.html
images/: Patrick_Star.svg.ppm  muddy_base.ppm  muddy_normal.ppm  quandale.ppm
include/: app-resource.h  attach.h  camera.h  math-utils.h  mesh-manager.h  mesh.h  raytracing.h  resource-manager.h  resource-structs.h  utilities.h  vertex.h  vulkan-app.h  window-manager.h
shaders/src/: shader.comp  shader.frag  shader.vert
src/: app-config.cpp  app-config.h  attach.cpp  camera.cpp  main.cpp  mesh-manager.cpp  raytracing.cpp  resource-manager.cpp  utilities.cpp  vertex.cpp  vulkan-app.cpp  window-manager.cpp
src/application/: CMakeLists.txt  app-base.h  queues.h  viewport-settings.h  vulkan-app.cpp  vulkan-app.h
src/file/: file-loader.cpp  file-loader.h
src/general-utils/: CMakeLists.txt  file-utilities.cpp  file-utilities.h  math-utilities.cpp  string-utilities.cpp  string-utilities.h
src/geometry/: CMakeLists.txt  geometry-base.cpp  geometry-base.h  geometry-manager.cpp  geometry-manager.h  geometry-utilities.cpp  geometry-utilities.h  mesh.cpp  mesh.h  vertex.h
src/image/: CMakeLists.txt  image-loader.cpp  image-loader.h  image.cpp  image.h
src/material/: CMakeLists.txt  input-texture-image.h  material-blueprint.cpp  material-blueprint.h  material-input.h  material.h
src/memory/: memory-block-node.h  memory-list-tree.h  red-black-tree.h  vertex-index-search-tree.h
src/render/: CMakeLists.txt  camera.h  render-utilities.cpp  render-utilities.h
src/rendering/: CMakeLists.txt  camera.cpp  rendering-utilities.cpp
src/resources/: CMakeLists.txt  buffer-storage-manager.h  resource-manager.cpp  resource-manager.h  resource-structs.h  resource-utilities.cpp  resource-utilities.h  resources.h  vertex-buffer-manager.h
src/resources/app-resources/: app-resource.h  buffer-resource.cpp  buffer-resource.h  command-pool-resource.cpp  command-pool-resource.h  descriptor-pool-resource.cpp  descriptor-pool-resource.h  descriptor-set-layout-resource.cpp  descriptor-set-layout-resource.h  device-memory-resource.cpp  device-memory-resource.h  device-resource.cpp  device-resource.h  fence-resource.cpp  fence-resource.h  framebuffer-resource.cpp  framebuffer-resource.h  image-resource.cpp  image-resource.h  image-view-resource.cpp  image-view-resource.h  instance-resource.cpp  instance-resource.h  pipeline-layout-resource.cpp  pipeline-layout-resource.h  pipeline-resource.cpp  pipeline-resource.h  render-pass-resource.cpp  render-pass-resource.h  resource-headers.h  sampler-resource.cpp  sampler-resource.h  semaphore-resource.cpp  semaphore-resource.h  shader-module-resource.cpp  shader-module-resource.h  surface-resource.cpp  surface-resource.h  swapchain-resource.cpp  swapchain-resource.h
src/resources/lists/: buffer-list.h  command-pool-list.h  descriptor-pool-list.h  descriptor-set-layout-list.h  device-list.h  device-memory-list.h  fence-list.h  framebuffer-list.h  image-list.h  image-view-list.h  instance-list.h  pipeline-layout-list.h  pipeline-list.h  render-pass-list.h  resource-list.h  sampler-list.h  semaphore-list.h  shader-module-list.h  surface-list.h  swapchain-list.h
